[COLAB-1029] Improved register and login icons; fixed TabBar spacing

--- a/themes/climatecolab-theme/src/main/webapp/css/scss/components/_c-TabBar.scss
+++ b/themes/climatecolab-theme/src/main/webapp/css/scss/components/_c-TabBar.scss
@@ -86,7 +86,7 @@ $b-TabBar__tab__marginRight: 6px !default;
 
 .c-TabBar__tab--first {
   @extend %c-TabBar__tab;
-  margin-left: 15px;
+  margin-left: 60px;
   border-right: $c-TabBar__tab__borderRight;
 }
 
